# nd4_develop

./: CLAUDE.md  Dockerfile  README.md  claude_config_fastmcp.json  claude_config_fastmcp_http.json  print_fast_mcp_env_settings.py  pyproject.toml
env/: env
src/: client_http_9000.py  client_stdio.py  example_mcp_client.py  pyproject.toml  server-info.json  server.py  server_fastmcp_http.py  server_fastmcp_stdio.py
src/payloads/v3/md/: vrf.md  vrf_attachment.md
src/prompts/: ansible_developer_role.json  ansible_developer_role.md  ansible_developer_role.txt
src/resources/payloads/: vrf.json
src/responses/v3/: vrf_attachments.json
src/scripts/: model_ndfc_response_vrf_attachments.py
