[project]
name = "demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "fastmcp>=2.10.1",
    "isort>=6.0.1",
    "mypy>=1.18.2",
    "pydantic>=2.11.7",
    "pylint>=3.3.7",
    "requests>=2.32.5",
]
